--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,8 @@
         "ramsey/uuid": "^3.1",
         "twig/twig": "^1.11 || ^2.0",
         "piwik/device-detector": "^3.7",
-        "sensio/distribution-bundle": "~5.0.6"
+        "sensio/distribution-bundle": "~5.0.6",
+        "composer/package-versions-deprecated": "^1.8"
     },
     "require-dev": {
         "phpcr/phpcr-shell": "~1.0",
