--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
         "doctrine/dbal": "^2.6",
         "doctrine/doctrine-bundle": "^1.10 || ^2.0",
         "doctrine/doctrine-fixtures-bundle": "^2.4 || ^3.0",
-        "doctrine/inflector": "^1.3",
+        "doctrine/inflector": "^1.4 || ^2.0",
         "doctrine/orm": "^2.5.3",
         "doctrine/phpcr-bundle": "^1.3.5 || ^2.0",
         "dragonmantank/cron-expression": "^1.1 || ^2.0 || ^3.0",
