--- a/composer.json
+++ b/composer.json
@@ -62,6 +62,7 @@
     },
     "conflict": {
         "doctrine/inflector": "1.4.0 || 2.0.0",
+        "phpspec/prophecy": "1.12.0",
         "symfony/symfony": "3.4.12 || 3.4.16 || 3.4.17",
         "jackalope/jackalope": "1.2.8 || 1.3.0 || 1.3.1 || 1.3.6",
         "phpcr/phpcr-utils": "1.2.0 - 1.2.10 || 1.3.0 - 1.3.2"
