--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,6 @@
         "ext-dom": "*",
         "ext-json": "*",
         "ext-simplexml": "*",
-        "antishov/doctrine-extensions-bundle": "^1.2.2",
         "composer/package-versions-deprecated": "^1.8",
         "contao/imagine-svg": "^0.2.2 || ^1.0",
         "dantleech/phpcr-migrations-bundle": "^1.0",
@@ -48,7 +47,7 @@
         "friendsofphp/proxy-manager-lts": "^1.0",
         "friendsofsymfony/http-cache": "^2.5",
         "friendsofsymfony/http-cache-bundle": "^2.6",
-        "friendsofsymfony/jsrouting-bundle": "^2.3",
+        "friendsofsymfony/jsrouting-bundle": "^2.3 || ^3.0",
         "friendsofsymfony/rest-bundle": "^2.8 || ^3.0",
         "gedmo/doctrine-extensions": "^2.4 || ^3.0",
         "guzzlehttp/promises": "^1.0",
@@ -63,45 +62,46 @@
         "nyholm/psr7": "^1.0",
         "oro/doctrine-extensions": "^1.0.8 || ^2.0",
         "ramsey/uuid": "^3.1 || ^4.0",
+        "stof/doctrine-extensions-bundle": "^1.2.2",
         "swiftmailer/swiftmailer": "^6.1.3",
-        "symfony-cmf/routing-bundle": "^2.1",
-        "symfony-cmf/slugifier-api": "^2.0",
-        "symfony/asset": "^4.4 || ^5.0",
-        "symfony/cache": "^4.4 || ^5.0",
-        "symfony/config": "^4.4 || ^5.0",
-        "symfony/console": "^4.4 || ^5.0",
-        "symfony/css-selector": "^4.4 || ^5.0",
-        "symfony/dependency-injection": "^4.4 || ^5.0",
-        "symfony/dom-crawler": "^4.4 || ^5.0",
-        "symfony/event-dispatcher": "^4.4 || ^5.0",
-        "symfony/event-dispatcher-contracts": "^1.0 || ^2.0",
-        "symfony/expression-language": "^4.4 || ^5.0",
-        "symfony/filesystem": "^4.4 || ^5.0",
-        "symfony/finder": "^4.4 || ^5.0",
-        "symfony/form": "^4.4 || ^5.0",
-        "symfony/framework-bundle": "^4.4 || ^5.0",
-        "symfony/http-client": "^4.4 || ^5.0",
-        "symfony/http-foundation": "^4.4 || ^5.0",
-        "symfony/http-kernel": "^4.4 || ^5.0",
-        "symfony/intl": "^4.4 || ^5.0",
-        "symfony/mime": "^4.4 || ^5.0",
-        "symfony/options-resolver": "^4.4 || ^5.0",
+        "symfony-cmf/routing-bundle": "^2.1 || ^3.0",
+        "symfony-cmf/slugifier-api": "^2.0 || ^3.0",
+        "symfony/asset": "^4.4 || ^5.0 || ^6.0",
+        "symfony/cache": "^4.4 || ^5.0 || ^6.0",
+        "symfony/config": "^4.4 || ^5.0 || ^6.0",
+        "symfony/console": "^4.4 || ^5.0 || ^6.0",
+        "symfony/css-selector": "^4.4 || ^5.0 || ^6.0",
+        "symfony/dependency-injection": "^4.4 || ^5.0 || ^6.0",
+        "symfony/dom-crawler": "^4.4 || ^5.0 || ^6.0",
+        "symfony/event-dispatcher": "^4.4 || ^5.0 || ^6.0",
+        "symfony/event-dispatcher-contracts": "^1.0 || ^2.0 || ^3.0",
+        "symfony/expression-language": "^4.4 || ^5.0 || ^6.0",
+        "symfony/filesystem": "^4.4 || ^5.0 || ^6.0",
+        "symfony/finder": "^4.4 || ^5.0 || ^6.0",
+        "symfony/form": "^4.4 || ^5.0 || ^6.0",
+        "symfony/framework-bundle": "^4.4 || ^5.0 || ^6.0",
+        "symfony/http-client": "^4.4 || ^5.0 || ^6.0",
+        "symfony/http-foundation": "^4.4 || ^5.0 || ^6.0",
+        "symfony/http-kernel": "^4.4 || ^5.0 || ^6.0",
+        "symfony/intl": "^4.4 || ^5.0 || ^6.0",
+        "symfony/mime": "^4.4 || ^5.0 || ^6.0",
+        "symfony/options-resolver": "^4.4 || ^5.0 || ^6.0",
         "symfony/polyfill-mbstring": "^1.0",
         "symfony/polyfill-php72": "^1.0",
-        "symfony/process": "^4.4 || ^5.0",
-        "symfony/property-access": "^4.4 || ^5.0",
-        "symfony/proxy-manager-bridge": "^4.4 || ^5.0",
-        "symfony/routing": "^4.4 || ^5.0",
-        "symfony/security-bundle": "^4.4 || ^5.0",
-        "symfony/security-core": "^4.4 || ^5.0",
-        "symfony/security-http": "^4.4 || ^5.0",
-        "symfony/string": "^5.0",
+        "symfony/process": "^4.4 || ^5.0 || ^6.0",
+        "symfony/property-access": "^4.4 || ^5.0 || ^6.0",
+        "symfony/proxy-manager-bridge": "^4.4 || ^5.0 || ^6.0",
+        "symfony/routing": "^4.4 || ^5.0 || ^6.0",
+        "symfony/security-bundle": "^4.4 || ^5.0 || ^6.0",
+        "symfony/security-core": "^4.4 || ^5.0 || ^6.0",
+        "symfony/security-http": "^4.4 || ^5.0 || ^6.0",
+        "symfony/string": "^5.0 || ^6.0",
         "symfony/swiftmailer-bundle": "^3.1.4",
-        "symfony/translation": "^4.4 || ^5.0",
-        "symfony/translation-contracts": "^1.0 || ^2.0",
-        "symfony/twig-bundle": "^4.4 || ^5.0",
-        "symfony/validator": "^4.4 || ^5.0",
-        "symfony/yaml": "^4.4 || ^5.0",
+        "symfony/translation": "^4.4 || ^5.0 || ^6.0",
+        "symfony/translation-contracts": "^1.0 || ^2.0 || ^3.0",
+        "symfony/twig-bundle": "^4.4 || ^5.0 || ^6.0",
+        "symfony/validator": "^4.4 || ^5.0 || ^6.0",
+        "symfony/yaml": "^4.4 || ^5.0 || ^6.0",
         "toflar/psr6-symfony-http-cache-store": "^1.1 || ^2.0 || ^3.0",
         "twig/twig": "^1.41 || ^2.10 || ^3.0",
         "webmozart/assert": "^1.9"
@@ -129,15 +129,15 @@
         "phpunit/phpunit": "^8.5.24 || ^9.5.18",
         "psr/event-dispatcher": "^1.0",
         "superbalist/flysystem-google-storage": "^7.1",
-        "symfony/browser-kit": "^4.4 || ^5.0",
-        "symfony/debug": "^4.4 || ^5.0",
-        "symfony/debug-bundle": "^4.4 || ^5.0",
-        "symfony/dotenv": "^4.4 || ^5.0",
+        "symfony/browser-kit": "^4.4 || ^5.0 || ^6.0",
+        "symfony/debug": "^4.4 || ^5.0 || ^6.0",
+        "symfony/debug-bundle": "^4.4 || ^5.0 || ^6.0",
+        "symfony/dotenv": "^4.4 || ^5.0 || ^6.0",
         "symfony/monolog-bundle": "^3.1",
-        "symfony/phpunit-bridge": "^4.4 || ^5.0",
-        "symfony/stopwatch": "^4.4 || ^5.0",
-        "symfony/var-dumper": "^4.4 || ^5.0",
-        "symfony/web-profiler-bundle": "^4.4 || ^5.0",
+        "symfony/phpunit-bridge": "^4.4 || ^5.0 || ^6.0",
+        "symfony/stopwatch": "^4.4 || ^5.0 || ^6.0",
+        "symfony/var-dumper": "^4.4 || ^5.0 || ^6.0",
+        "symfony/web-profiler-bundle": "^4.4 || ^5.0 || ^6.0",
         "thecodingmachine/phpstan-strict-rules": "^1.0"
     },
     "conflict": {
