--- a/composer.json
+++ b/composer.json
@@ -32,16 +32,16 @@
         "composer/package-versions-deprecated": "^1.8",
         "contao/imagine-svg": "^1.0",
         "doctrine/annotations": "^1.2 || ^2.0",
-        "doctrine/cache": "^1.0",
+        "doctrine/cache": "^1.0.1",
         "doctrine/collections": "^1.0 || ^2.0",
-        "doctrine/data-fixtures": "^1.3.3",
+        "doctrine/data-fixtures": "^1.7",
         "doctrine/dbal": "^2.13 || ^3.0",
         "doctrine/doctrine-bundle": "^2.4",
         "doctrine/doctrine-fixtures-bundle": "^3.3 || ^4.0",
         "doctrine/inflector": "^1.4.1 || ^2.0.1",
         "doctrine/orm": "^2.13",
         "doctrine/persistence": "^2.0 || ^3.0",
-        "doctrine/phpcr-bundle": "^2.2",
+        "doctrine/phpcr-bundle": "3.x-dev as 2.99",
         "dragonmantank/cron-expression": "^1.1 || ^2.0 || ^3.0",
         "friendsofphp/proxy-manager-lts": "^1.0",
         "friendsofsymfony/http-cache": "^2.10",
@@ -62,7 +62,7 @@
         "oro/doctrine-extensions": "^1.0.8 || ^2.0",
         "phpcr/phpcr-migrations": "^1.3.1",
         "phpcr/phpcr-migrations-bundle": "^1.5",
-        "phpcr/phpcr-utils": "^1.6.2",
+        "phpcr/phpcr-utils": "^1.6.2 || ^2.0",
         "ramsey/uuid": "^3.1 || ^4.0",
         "stof/doctrine-extensions-bundle": "^1.2.2",
         "symfony-cmf/routing": "^2.3 || ^3.0",
@@ -75,6 +75,7 @@
         "symfony/css-selector": "^5.4 || ^6.0",
         "symfony/dependency-injection": "^5.4 || ^6.0",
         "symfony/deprecation-contracts": "^2.1 || ^3.0",
+        "symfony/doctrine-bridge": "^5.4 || ^6.0",
         "symfony/dom-crawler": "^5.4 || ^6.0",
         "symfony/event-dispatcher": "^5.4 || ^6.0",
         "symfony/event-dispatcher-contracts": "^2.1 || ^3.0",
@@ -112,8 +113,8 @@
         "friendsofphp/php-cs-fixer": "^3.14",
         "google/cloud-storage": "^1.0",
         "handcraftedinthealps/zendsearch": "^2.0",
-        "jackalope/jackalope": "^1.4.5",
-        "jackalope/jackalope-doctrine-dbal": "^1.6",
+        "jackalope/jackalope": "2.x-dev as 2.0.0",
+        "jackalope/jackalope-doctrine-dbal": "2.x-dev as 2.0.0",
         "jangregor/phpstan-prophecy": "^1.0",
         "league/flysystem": "^1.0",
         "league/flysystem-aws-s3-v3": "^1.0.1",
@@ -156,6 +157,7 @@
         "behat/transliterator": "< 1.3.0",
         "doctrine/lexer": ">= 3.0.0",
         "doctrine/orm": "2.10.0 || 2.14.2 || 2.16.0 - 2.17.2",
+        "doctrine/phpcr-bundle": "3.0.0-beta1",
         "friendsofphp/php-cs-fixer": "3.9.1",
         "gedmo/doctrine-extensions" : "3.7.0",
         "jackalope/jackalope": "< 1.4.5",
