--- a/composer.json
+++ b/composer.json
@@ -34,14 +34,14 @@
         "doctrine/annotations": "^1.2 || ^2.0",
         "doctrine/cache": "^1.0.1",
         "doctrine/collections": "^1.0 || ^2.0",
-        "doctrine/data-fixtures": "^1.7",
+        "doctrine/data-fixtures": "^1.3.3",
         "doctrine/dbal": "^2.13 || ^3.0",
         "doctrine/doctrine-bundle": "^2.4",
         "doctrine/doctrine-fixtures-bundle": "^3.3 || ^4.0",
         "doctrine/inflector": "^1.4.1 || ^2.0.1",
         "doctrine/orm": "^2.13",
         "doctrine/persistence": "^2.0 || ^3.0",
-        "doctrine/phpcr-bundle": "3.x-dev as 2.99",
+        "doctrine/phpcr-bundle": "^2.2 || ^3.0",
         "dragonmantank/cron-expression": "^1.1 || ^2.0 || ^3.0",
         "friendsofphp/proxy-manager-lts": "^1.0",
         "friendsofsymfony/http-cache": "^2.10",
@@ -113,8 +113,8 @@
         "friendsofphp/php-cs-fixer": "^3.14",
         "google/cloud-storage": "^1.0",
         "handcraftedinthealps/zendsearch": "^2.0",
-        "jackalope/jackalope": "2.x-dev as 2.0.0",
-        "jackalope/jackalope-doctrine-dbal": "2.x-dev as 2.0.0",
+        "jackalope/jackalope": "^1.4.5 || ^2.0",
+        "jackalope/jackalope-doctrine-dbal": "^1.6 || ^2.0",
         "jangregor/phpstan-prophecy": "^1.0",
         "league/flysystem": "^1.0",
         "league/flysystem-aws-s3-v3": "^1.0.1",
@@ -157,7 +157,6 @@
         "behat/transliterator": "< 1.3.0",
         "doctrine/lexer": ">= 3.0.0",
         "doctrine/orm": "2.10.0 || 2.14.2 || 2.16.0 - 2.17.2",
-        "doctrine/phpcr-bundle": "3.0.0-beta1",
         "friendsofphp/php-cs-fixer": "3.9.1",
         "gedmo/doctrine-extensions" : "3.7.0",
         "jackalope/jackalope": "< 1.4.5",
