--- a/composer.json
+++ b/composer.json
@@ -61,7 +61,7 @@
         "nyholm/psr7": "^1.3",
         "oro/doctrine-extensions": "^1.0.8 || ^2.0",
         "phpcr/phpcr-migrations": "^1.3.1",
-        "phpcr/phpcr-migrations-bundle": "^1.5",
+        "phpcr/phpcr-migrations-bundle": "^1.5 || ^2.0",
         "phpcr/phpcr-utils": "^1.6.2 || ^2.0",
         "ramsey/uuid": "^3.1 || ^4.0",
         "stof/doctrine-extensions-bundle": "^1.2.2",
