--- a/composer.json
+++ b/composer.json
@@ -44,8 +44,8 @@
         "doctrine/phpcr-bundle": "^2.2 || ^3.0",
         "dragonmantank/cron-expression": "^1.1 || ^2.0 || ^3.0",
         "friendsofphp/proxy-manager-lts": "^1.0",
-        "friendsofsymfony/http-cache": "^2.10",
-        "friendsofsymfony/http-cache-bundle": "^2.10.1",
+        "friendsofsymfony/http-cache": "^2.10 || ^3.0",
+        "friendsofsymfony/http-cache-bundle": "^2.10.1 || ^3.0",
         "friendsofsymfony/jsrouting-bundle": "^2.7 || ^3.0",
         "friendsofsymfony/rest-bundle": "^3.0.4",
         "gedmo/doctrine-extensions": "^3.0.4",
@@ -119,10 +119,10 @@
         "league/flysystem": "^1.0",
         "league/flysystem-aws-s3-v3": "^1.0.1",
         "league/flysystem-azure-blob-storage": "^0.1 || ^1.0",
-        "matthiasnoback/symfony-config-test": "^4.2",
-        "matthiasnoback/symfony-dependency-injection-test": "^4.2",
+        "matthiasnoback/symfony-config-test": "^4.2 || ^5.0",
+        "matthiasnoback/symfony-dependency-injection-test": "^4.2 || ^5.0",
         "microsoft/azure-storage-blob": "^1.2",
-        "monolog/monolog": "^1.26.1 || ^2.3",
+        "monolog/monolog": "^1.26.1 || ^2.3 || ^3.0",
         "php-ffmpeg/php-ffmpeg": "^0.17 || ^1.0",
         "phpcr/phpcr-shell": "^1.4.0",
         "phpspec/prophecy": "^1.14",
