--- a/composer.json
+++ b/composer.json
@@ -273,5 +273,6 @@
             "symfony/runtime": true,
             "php-http/discovery": true
         }
-    }
+    },
+    "minimum-stability": "dev"
 }
